package com.merge.mergedatingapp.profiles;

public class Enums {
    public enum GenderType { MALE, FEMALE, NONBINARY, OTHER, UNSPECIFIED }
    public enum PronounsType { HE_HIM, SHE_HER, THEY_THEM, OTHER, UNSPECIFIED }
    public enum RelationshipIntentType { LONG_TERM, SHORT_TERM, FRIENDSHIP, CASUAL, UNDECIDED }
}
